Python builds on OS X don't work; travis-ci/travis-ci#4729

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
 - '3.2'
 - '3.3'
 - '3.4'
-os:
-- linux
-- osx
+#os:
+#- linux
+#- osx
 install:
 - make BINPREFIX= deps
 - pip install coveralls
